--- a/src/components/Collapse.css
+++ b/src/components/Collapse.css
@@ -46,7 +46,7 @@
     display: none;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
     .collapse .title .text {
         font-size: 13px;
     }
