--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -91,7 +91,7 @@
     background-color: rgba(255, 96, 96, 0.8);
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
     .gallery {
         height: 255px;
     }
