--- a/src/components/Tag.css
+++ b/src/components/Tag.css
@@ -11,7 +11,7 @@
     text-align: center;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
     .tag {
         width: 84px;
         height: 18px;
