--- a/src/components/Thumb.css
+++ b/src/components/Thumb.css
@@ -29,7 +29,7 @@
     text-align: left;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
     .thumb {
         width: 100%;
         height: 255px;
