--- a/src/layout/Navigation.css
+++ b/src/layout/Navigation.css
@@ -20,7 +20,7 @@ nav ul li a.active {
     text-decoration: underline;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
     nav ul li {
         font-size: 12px;
         margin-left: 10px;
