--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -44,7 +44,7 @@
     margin-bottom: 50px;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
     .home {
         margin-top: 0;
     }
